--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -7,6 +7,8 @@ on:
       - 'bump-**'
       - 'renovate/**'
     paths-ignore:
+      - '.gitignore'
+      - '.mergify.yml'
       - 'CHANGELOG.md'
       - 'LICENSE'
       - 'README.md'
